--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL55Dialect
 logging.level.org.springframework.boot.autoconfigure=ERROR
